objects/DemoObject__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TYPE__c</fullName>
        <label>TYPE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DemoObject</label>
    <nameField>
        <label>DemoObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DemoObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>